--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-hot-toast": "^2.6.0",
-    "react-markdown": "^10.1.0"
+    "react-markdown": "^10.1.0",
+    "tailwindcss": "^3.4.0",
+    "postcss": "^8.4.0",
+    "autoprefixer": "^10.4.0"
   }
 }
