--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev:frontend": "cd frontend && npm run dev",
     "dev:backend": "cd backend && npm run dev",
     "build": "cd frontend && npm run build",
-    "install:all": "npm install && cd frontend && npm install && cd ../backend && npm install"
+    "install:all": "npm install && cd frontend && npm install && cd ../backend && npm install",
+    "start": "cd backend && node index.js"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^5.0.2",
