--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev:backend": "cd backend && npm run dev",
     "build": "cd frontend && npm run build",
     "install:all": "npm install && cd frontend && npm install && cd ../backend && npm install",
-    "start": "cd backend && node index.js"
+    "start": "cd backend && node src/index.js"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^5.0.2",
